# KANS

./: .gitignore  .sample.env  App.py  CNAME  Nuitka call.txt  README.md  SECURITY.md  pyproject.toml  revision.txt
.github/workflows/: codeql-analysis.yml  devskim.yml
docs/: Kans Your Shopping Assistant.aip  kans-firebase.iss
res/: .gitignore  service-account-file.json  service-account-file.sample.json
tools/: Adjusttext.py  CardView.py  tkLabelShortTool.py
tools/Loading/: Loading.py
